--- a/src/index.html
+++ b/src/index.html
@@ -36,14 +36,22 @@
               cheese, vegetables, or meats.
             </p>
           </section>
-          <section class="p-3">
-            <h3>Preparation time</h3>
-            <ul>
-              <li>
+          <section
+            class="p-3 bg-(--rose-50) rounded-xl font-(family-name:--font-outfit) my-4"
+          >
+            <h3 class="text-(--rose-800) font-semibold text-xl mb-2">
+              Preparation time
+            </h3>
+            <ul class="text-(--stone-600) list-disc list-inside">
+              <li class="pl-1">
                 <strong>Total</strong>: Approximately 10 minutes
               </li>
-              <li><strong>Preparation</strong>: 5 minutes</li>
-              <li><strong>Cooking</strong>: 5 minutes</li>
+              <li class="pl-1">
+                <strong>Preparation</strong>: 5 minutes
+              </li>
+              <li class="pl-1">
+                <strong>Cooking</strong>: 5 minutes
+              </li>
             </ul>
           </section>
           <section>
