--- a/src/index.html
+++ b/src/index.html
@@ -54,9 +54,15 @@
               </li>
             </ul>
           </section>
-          <section>
-            <h2>Ingredients</h2>
-            <ul>
+          <section class="mb-4">
+            <h2
+              class="font-(family-name:--font-young-serif) text-[28px] text-(--brown-800) mb-3 leading-none"
+            >
+              Ingredients
+            </h2>
+            <ul
+              class="text-(--stone-600) font-(family-name:--font-outfit) list-disc list-inside"
+            >
               <li>2-3 large eggs</li>
               <li>Salt, to taste</li>
               <li>Pepper, to taste</li>
