--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
               </li>
             </ul>
           </section>
-          <section class="mb-4">
+          <section>
             <h2
               class="font-(family-name:--font-young-serif) text-[28px] text-(--brown-800) mb-3 leading-none"
             >
@@ -73,10 +73,14 @@
               </li>
             </ul>
           </section>
-          <hr />
+          <hr class="text-(--stone-150) my-4" />
           <section>
-            <h2>Instructions</h2>
-            <ol>
+            <h2
+              class="font-(family-name:--font-young-serif) text-[28px] text-(--brown-800) mb-3 leading-none"
+            >
+              Instructions
+            </h2>
+            <ol class="list-decimal list-inside text-(--stone-600)">
               <li>
                 <strong>Beat the eggs:</strong> In a bowl, beat the
                 eggs with a pinch of salt and pepper until they are
@@ -110,7 +114,7 @@
               </li>
             </ol>
           </section>
-          <hr class="line" />
+          <hr class="text-(--stone-150) my-4" />
           <section class="nutrition">
             <h2>Nutrition</h2>
             <p>
