--- a/src/index.html
+++ b/src/index.html
@@ -116,27 +116,33 @@
           </section>
           <hr class="text-(--stone-150) my-4" />
           <section class="nutrition">
-            <h2>Nutrition</h2>
-            <p>
+            <h2
+              class="font-(family-name:--font-young-serif) text-[28px] text-(--brown-800) mb-3 leading-none"
+            >
+              Nutrition
+            </h2>
+            <p class="text-(--stone-600)">
               The table below shows nutritional values per serving
               without the additional fillings.
             </p>
-            <table>
-              <tr>
+            <table
+              class="min-w-full text-(--stone-600) font-(family-name:--font-outfit)"
+            >
+              <tr class="border-b">
                 <td>Calories</td>
-                <td>277kcal</td>
+                <td class="text-(--brown-800) font-bold">277kcal</td>
               </tr>
-              <tr>
+              <tr class="border-b">
                 <td>Carbs</td>
-                <td>0g</td>
+                <td class="text-(--brown-800) font-bold">0g</td>
               </tr>
-              <tr>
+              <tr class="border-b">
                 <td>Protein</td>
-                <td>20g</td>
+                <td class="text-(--brown-800) font-bold">20g</td>
               </tr>
               <tr>
                 <td>Fat</td>
-                <td>22g</td>
+                <td class="text-(--brown-800) font-bold">22g</td>
               </tr>
             </table>
           </section>
@@ -144,7 +150,7 @@
       </article>
     </main>
 
-    <footer>
+    <footer class="text-center`">
       Challenge by
       <a
         href="https://www.frontendmentor.io?ref=challenge"
