--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
         <section class="px-4 py-5">
           <section class="grid gap-3">
             <h1
-              class="font-(family-name:--font-young-serif) text-4xl text-(--stone-900)"
+              class="font-(family-name:--font-young-serif) text-4xl text-(--stone-900) leading-none"
             >
               Simple Omelette Recipe
             </h1>
@@ -39,18 +39,35 @@
           <section
             class="p-3 bg-(--rose-50) rounded-xl font-(family-name:--font-outfit) my-4"
           >
-            <h3 class="text-(--rose-800) font-semibold text-xl mb-2">
+            <h3
+              class="text-(--rose-800) font-semibold text-xl mb-2 leading-none"
+            >
               Preparation time
             </h3>
-            <ul class="text-(--stone-600) list-disc list-inside">
-              <li class="pl-1">
-                <strong>Total</strong>: Approximately 10 minutes
+            <ul class="space-y-1">
+              <li class="flex items-start gap-3">
+                <span
+                  class="mt-2 ml-1 mr-0.75 w-0.5 h-0.5 bg-(--rose-800) rounded-full flex-shrink-0"
+                ></span>
+                <p class="text-(--stone-600)">
+                  <strong>Total:</strong> Approximately 10 minutes
+                </p>
               </li>
-              <li class="pl-1">
-                <strong>Preparation</strong>: 5 minutes
+              <li class="flex items-start gap-3">
+                <span
+                  class="mt-1.5 ml-1 mr-0.75 w-0.5 h-0.5 bg-(--rose-800) rounded-full flex-shrink-0"
+                ></span>
+                <p class="text-(--stone-600)">
+                  <strong>Preparation:</strong> 5 minutes
+                </p>
               </li>
-              <li class="pl-1">
-                <strong>Cooking</strong>: 5 minutes
+              <li class="flex items-start gap-3">
+                <span
+                  class="mt-1.5 ml-1 mr-0.75 w-0.5 h-0.5 bg-(--rose-800) rounded-full flex-shrink-0"
+                ></span>
+                <p class="text-(--stone-600)">
+                  <strong>Cooking:</strong> 5 minutes
+                </p>
               </li>
             </ul>
           </section>
@@ -61,15 +78,31 @@
               Ingredients
             </h2>
             <ul
-              class="text-(--stone-600) font-(family-name:--font-outfit) list-disc list-inside"
+              class="text-(--stone-600) font-(family-name:--font-outfit) space-y-1"
             >
-              <li>2-3 large eggs</li>
-              <li>Salt, to taste</li>
-              <li>Pepper, to taste</li>
-              <li>1 tablespoon of butter or oil</li>
-              <li>
-                Optional fillings: cheese, diced vegetables, cooked
-                meats, herbs
+              <li class="flex items-start gap-3">
+                <span
+                  class="mt-1.5 ml-1 mr-0.75 w-0.5 h-0.5 bg-(--brown-800) rounded-full flex-shrink-0"
+                ></span>
+                <p>2-3 large eggs</p>
+              </li class="flex items-start gap-3">
+              <li class="flex items-start gap-3"><span
+                  class="mt-1.5 ml-1 mr-0.75 w-0.5 h-0.5 bg-(--brown-800) rounded-full flex-shrink-0"
+                ></span><p>Salt, to taste</p></li>
+              <li class="flex items-start gap-3"><span
+                  class="mt-1.5 ml-1 mr-0.75 w-0.5 h-0.5 bg-(--brown-800) rounded-full flex-shrink-0"
+                ></span><p>Pepper, to taste</p></li>
+              <li class="flex items-start gap-3"><span
+                  class="mt-1.5 ml-1 mr-0.75 w-0.5 h-0.5 bg-(--brown-800) rounded-full flex-shrink-0"
+                ></span><p>1 tablespoon of butter or oil</p></li>
+              <li class="flex items-start gap-3">
+                <span
+                  class="mt-3 ml-1 mr-0.75 w-0.5 h-0.5 bg-(--brown-800) rounded-full flex-shrink-0"
+                ></span>
+                <p>
+                  Optional fillings: cheese, diced vegetables, cooked
+                  meats, herbs
+                </p>
               </li>
             </ul>
           </section>
