--- a/src/index.html
+++ b/src/index.html
@@ -85,16 +85,27 @@
                   class="mt-1.5 ml-1 mr-0.75 w-0.5 h-0.5 bg-(--brown-800) rounded-full flex-shrink-0"
                 ></span>
                 <p>2-3 large eggs</p>
-              </li class="flex items-start gap-3">
-              <li class="flex items-start gap-3"><span
+              </li>
+
+              <li class="flex items-start gap-3"></li>
+              <li class="flex items-start gap-3">
+                <span
                   class="mt-1.5 ml-1 mr-0.75 w-0.5 h-0.5 bg-(--brown-800) rounded-full flex-shrink-0"
-                ></span><p>Salt, to taste</p></li>
-              <li class="flex items-start gap-3"><span
+                ></span>
+                <p>Salt, to taste</p>
+              </li>
+              <li class="flex items-start gap-3">
+                <span
                   class="mt-1.5 ml-1 mr-0.75 w-0.5 h-0.5 bg-(--brown-800) rounded-full flex-shrink-0"
-                ></span><p>Pepper, to taste</p></li>
-              <li class="flex items-start gap-3"><span
+                ></span>
+                <p>Pepper, to taste</p>
+              </li>
+              <li class="flex items-start gap-3">
+                <span
                   class="mt-1.5 ml-1 mr-0.75 w-0.5 h-0.5 bg-(--brown-800) rounded-full flex-shrink-0"
-                ></span><p>1 tablespoon of butter or oil</p></li>
+                ></span>
+                <p>1 tablespoon of butter or oil</p>
+              </li>
               <li class="flex items-start gap-3">
                 <span
                   class="mt-3 ml-1 mr-0.75 w-0.5 h-0.5 bg-(--brown-800) rounded-full flex-shrink-0"
@@ -113,69 +124,107 @@
             >
               Instructions
             </h2>
-            <ol class="list-decimal list-inside text-(--stone-600)">
-              <li>
-                <strong>Beat the eggs:</strong> In a bowl, beat the
-                eggs with a pinch of salt and pepper until they are
-                well mixed. You can add a tablespoon of water or milk
-                for a fluffier texture.
+            <ol class="text-(--stone-600) space-y-1">
+              <li class="flex items-start gap-3">
+                <span class="text-(--brown-800) font-bold ml-1"
+                  >1.</span
+                >
+                <p>
+                  <strong>Beat the eggs:</strong> In a bowl, beat the
+                  eggs with a pinch of salt and pepper until they are
+                  well mixed. You can add a tablespoon of water or
+                  milk for a fluffier texture.
+                </p>
               </li>
-              <li>
-                <strong>Heat the pan:</strong> Place a non-stick
-                frying pan over medium heat and add butter or oil.
+              <li class="flex items-start gap-3">
+                <span class="text-(--brown-800) font-bold ml-1"
+                  >2.</span
+                >
+                <p>
+                  <strong>Heat the pan:</strong> Place a non-stick
+                  frying pan over medium heat and add butter or oil.
+                </p>
               </li>
-              <li>
-                <strong>Cook the omelette:</strong> Once the butter is
-                melted and bubbling, pour in the eggs. Tilt the pan to
-                ensure the eggs evenly coat the surface.
+              <li class="flex items-start gap-3">
+                <span class="text-(--brown-800) font-bold ml-1"
+                  >3.</span
+                >
+                <p>
+                  <strong>Cook the omelette:</strong> Once the butter
+                  is melted and bubbling, pour in the eggs. Tilt the
+                  pan to ensure the eggs evenly coat the surface.
+                </p>
               </li>
-              <li>
-                <strong>Add fillings (optional):</strong> When the
-                eggs begin to set at the edges but are still slightly
-                runny in the middle, sprinkle your chosen fillings
-                over one half of the omelette.
+              <li class="flex items-start gap-3">
+                <span class="text-(--brown-800) font-bold ml-1"
+                  >4.</span
+                >
+                <p>
+                  <strong>Add fillings (optional):</strong> When the
+                  eggs begin to set at the edges but are still
+                  slightly runny in the middle, sprinkle your chosen
+                  fillings over one half of the omelette.
+                </p>
               </li>
-              <li>
-                <strong>Fold and serve:</strong> As the omelette
-                continues to cook, carefully lift one edge and fold it
-                over the fillings. Let it cook for another minute,
-                then slide it onto a plate.
+              <li class="flex items-start gap-3">
+                <span class="text-(--brown-800) font-bold ml-1"
+                  >5.</span
+                >
+                <p>
+                  <strong>Fold and serve:</strong> As the omelette
+                  continues to cook, carefully lift one edge and fold
+                  it over the fillings. Let it cook for another
+                  minute, then slide it onto a plate.
+                </p>
               </li>
-              <li>
-                <strong>Enjoy:</strong> Serve hot, with additional
-                salt and pepper if needed.
+              <li class="flex items-start gap-3">
+                <span class="text-(--brown-800) font-bold ml-1"
+                  >6.</span
+                >
+                <p>
+                  <strong>Enjoy:</strong> Serve hot, with additional
+                  salt and pepper if needed.
+                </p>
               </li>
             </ol>
           </section>
           <hr class="text-(--stone-150) my-4" />
           <section class="nutrition">
             <h2
-              class="font-(family-name:--font-young-serif) text-[28px] text-(--brown-800) mb-3 leading-none"
+              class="font-(family-name:--font-young-serif) text-[28px] text-(--brown-800) leading-none"
             >
               Nutrition
             </h2>
-            <p class="text-(--stone-600)">
+            <p class="text-(--stone-600) my-3">
               The table below shows nutritional values per serving
               without the additional fillings.
             </p>
             <table
               class="min-w-full text-(--stone-600) font-(family-name:--font-outfit)"
             >
-              <tr class="border-b">
-                <td>Calories</td>
-                <td class="text-(--brown-800) font-bold">277kcal</td>
+              <tr class="border-b border-(--stone-150)">
+                <td class="py-1.5 pl-4 pr-2">Calories</td>
+                <td class="py-1.5 pr-4 text-(--brown-800) font-bold">
+                  277kcal
+                </td>
               </tr>
-              <tr class="border-b">
-                <td>Carbs</td>
-                <td class="text-(--brown-800) font-bold">0g</td>
+              <tr class="border-b border-(--stone-150)">
+                <td class="py-1.5 pl-4 pr-2">Carbs</td>
+                <td class="py-1.5 pr-4 text-(--brown-800) font-bold">
+                  0g
+                </td>
               </tr>
-              <tr class="border-b">
-                <td>Protein</td>
-                <td class="text-(--brown-800) font-bold">20g</td>
+              <tr class="border-b border-(--stone-150)">
+                <td class="py-1.5 pl-4 pr-2">Protein</td>
+                <td class="py-1.5 pr-4 text-(--brown-800) font-bold">
+                  20g
+                </td>
               </tr>
               <tr>
-                <td>Fat</td>
-                <td class="text-(--brown-800) font-bold">22g</td>
+                <td class="py-1.5 pl-4 pr-2">Fat</td>
+                <td class="py-1.5 pr-4 text-(--brown-800) font-bold">
+                  22g
+                </td>
               </tr>
             </table>
           </section>
@@ -183,7 +232,7 @@
       </article>
     </main>
 
-    <footer class="text-center`">
+    <footer class="text-center">
       Challenge by
       <a
         href="https://www.frontendmentor.io?ref=challenge"
