style mobile imaging

--- a/src/index.html
+++ b/src/index.html
@@ -12,10 +12,10 @@
   </head>
   <body>
     <main class="min-w-full">
-      <article>
+      <article class="bg-white">
         <figure>
           <img
-            class="h-[171px]"
+            class="w-full h-[171px]"
             src="./images/image-omelette.jpeg"
             alt="picture of an omelette"
           />
