style card - tablet

--- a/src/index.html
+++ b/src/index.html
@@ -11,11 +11,13 @@
     <title>Frontend Mentor | Recipe page</title>
   </head>
   <body>
-    <main class="min-w-full">
-      <article class="bg-white">
+    <main class="min-w-full md:bg-(--stone-100) md:py-18.5 md:px-6">
+      <article
+        class="bg-white md:w-[616px] md:p-5 md:mx-auto md:rounded-3xl md:shadow-[0_4px_4px_rgba(0,0,0,0.25)]"
+      >
         <figure>
           <img
-            class="w-full h-[171px]"
+            class="w-full h-[171px] md:w-[536px] md:h-[300px]"
             src="./images/image-omelette.jpeg"
             alt="picture of an omelette"
           />
