--- a/src/index.html
+++ b/src/index.html
@@ -17,15 +17,15 @@
       >
         <figure>
           <img
-            class="w-full h-[171px] md:w-[536px] md:h-[300px]"
+            class="w-full h-[171px] md:w-[536px] md:h-[300px] md:rounded-xl"
             src="./images/image-omelette.jpeg"
             alt="picture of an omelette"
           />
         </figure>
-        <section class="px-4 py-5">
+        <section class="px-4 py-5 md:p-0 md:mt-5">
           <section class="grid gap-3">
             <h1
-              class="font-(family-name:--font-young-serif) text-4xl text-(--stone-900) leading-none"
+              class="font-(family-name:--font-young-serif) text-4xl md:text-[40px] text-(--stone-900) leading-none"
             >
               Simple Omelette Recipe
             </h1>
