--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
             <ul class="space-y-1">
               <li class="flex items-start gap-3">
                 <span
-                  class="mt-2 ml-1 mr-0.75 w-0.5 h-0.5 bg-(--rose-800) rounded-full flex-shrink-0"
+                  class="mt-2 md:mt-1.5 ml-1 mr-0.75 w-0.5 h-0.5 bg-(--rose-800) rounded-full flex-shrink-0"
                 ></span>
                 <p class="text-(--stone-600)">
                   <strong>Total:</strong> Approximately 10 minutes
@@ -110,7 +110,7 @@
               </li>
               <li class="flex items-start gap-3">
                 <span
-                  class="mt-3 ml-1 mr-0.75 w-0.5 h-0.5 bg-(--brown-800) rounded-full flex-shrink-0"
+                  class="mt-3 md:mt-1.5 ml-1 mr-0.75 w-0.5 h-0.5 bg-(--brown-800) rounded-full flex-shrink-0"
                 ></span>
                 <p>
                   Optional fillings: cheese, diced vegetables, cooked
@@ -197,7 +197,9 @@
             >
               Nutrition
             </h2>
-            <p class="text-(--stone-600) my-3">
+            <p
+              class="text-(--stone-600) my-3 w-full font-(family-name:--font-outfit)"
+            >
               The table below shows nutritional values per serving
               without the additional fillings.
             </p>
