style heading for desktop

--- a/src/index.html
+++ b/src/index.html
@@ -13,11 +13,11 @@
   <body>
     <main class="min-w-full md:bg-(--stone-100) md:py-18.5 md:px-6">
       <article
-        class="bg-white md:w-[616px] md:p-5 md:mx-auto md:rounded-3xl md:shadow-[0_4px_4px_rgba(0,0,0,0.25)]"
+        class="bg-white md:w-[616px] lg:w-[736px] md:p-5 md:mx-auto md:rounded-3xl md:shadow-[0_4px_4px_rgba(0,0,0,0.25)]"
       >
         <figure>
           <img
-            class="w-full h-[171px] md:w-[536px] md:h-[300px] md:rounded-xl"
+            class="w-full h-[171px] md:w-[536px] md:h-[300px] md:rounded-xl lg:w-full"
             src="./images/image-omelette.jpeg"
             alt="picture of an omelette"
           />
@@ -25,7 +25,7 @@
         <section class="px-4 py-5 md:p-0 md:mt-5">
           <section class="grid gap-3">
             <h1
-              class="font-(family-name:--font-young-serif) text-4xl md:text-[40px] text-(--stone-900) leading-none"
+              class="font-(family-name:--font-young-serif) text-4xl md:text-[40px] lg:text-5xl text-(--stone-900) leading-none"
             >
               Simple Omelette Recipe
             </h1>
