--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./output.css" />
     <title>Frontend Mentor | Recipe page</title>
   </head>
-  <body>
+  <body class="md:bg-(--stone-100)">
     <main class="min-w-full md:bg-(--stone-100) md:py-16 md:px-6">
       <article
         class="bg-white md:w-[616px] lg:w-[736px] md:p-5 md:mx-auto md:rounded-3xl md:shadow-[0_4px_4px_rgba(0,0,0,0.25)]"
@@ -236,13 +236,19 @@
       </article>
     </main>
 
-    <footer class="text-center">
+    <footer class="text-center bottom-0">
       Challenge by
       <a
         href="https://www.frontendmentor.io?ref=challenge"
         target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">jeffgrahamcodes</a>.
+      >. Coded by
+      <a
+        class="underline"
+        href="https://jeffgraham.codes"
+        target="_blank"
+        >jeffgrahamcodes</a
+      >.
     </footer>
   </body>
 </html>
