--- a/src/index.html
+++ b/src/index.html
@@ -126,7 +126,9 @@
             >
               Instructions
             </h2>
-            <ol class="text-(--stone-600) space-y-1">
+            <ol
+              class="text-(--stone-600) space-y-1 font-(family-name:--font-outfit)"
+            >
               <li class="flex items-start gap-3">
                 <span class="text-(--brown-800) font-bold ml-1"
                   >1.</span
